// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render default varient if no props are provided 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 16px;
}

<span
  class="c0"
  font-size="16px"
>
  Hello
</span>
`;

exports[`Button should work with default variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 16px;
}

<span
  class="c0"
  font-size="16px"
>
  Hello
</span>
`;

exports[`Button should work with h1 variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 38px;
}

<h1
  class="c0"
  font-size="38px"
>
  Hello
</h1>
`;

exports[`Button should work with h2 variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 34px;
}

<h2
  class="c0"
  font-size="34px"
>
  Hello
</h2>
`;

exports[`Button should work with h3 variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 28px;
}

<h3
  class="c0"
  font-size="28px"
>
  Hello
</h3>
`;

exports[`Button should work with h4 variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 22px;
}

<h4
  class="c0"
  font-size="22px"
>
  Hello
</h4>
`;

exports[`Button should work with h5 variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 18px;
}

<h5
  class="c0"
  font-size="18px"
>
  Hello
</h5>
`;

exports[`Button should work with h6 variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 16px;
}

<h6
  class="c0"
  font-size="16px"
>
  Hello
</h6>
`;

exports[`Button should work with p variant 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-size: 20px;
}

<p
  class="c0"
  font-size="20px"
>
  Hello
</p>
`;

exports[`Button should work with styled system props 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 8px;
  font-size: 16px;
  color: #2F47C7;
}

<span
  class="c0"
  color="blue"
  font-size="16px"
>
  Test
</span>
`;

exports[`Button should work with the cursor prop 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  cursor: pointer;
  font-size: 16px;
}

<span
  class="c0"
  cursor="pointer"
  font-size="16px"
>
  Hello
</span>
`;
